# RCM-sea-ice-mmseg

./: .gitmodules  2_patch_dataset_creator.py  4_load_model.py  README.md  annotated_products.txt  irgs.py  landmask_functions.py  parallel_stuff.py  rcm_functions.py  windows_create_env.sh
magic_lib/: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
magic_lib/magic_core/Classifier/include/: GaussianClustering.h  RegionClassifier.h  Sampler.h  SimpleClustering.h
magic_lib/magic_core/Classifier/src/: RegionBasedClustering.cpp
magic_lib/magic_core/Common/src/: EstimateUtil.cpp
magic_lib/magic_core/Graph/include/: AVLTree.h  GIEPGraph.h  GaussianRegion.h  GaussianStrengthPenaltyBoundary.h  Graph.h  Region.h  RegionMerger.h  StrengthPenaltyBoundary.h  search_util.h
magic_lib/magic_core/Graph/src/: AVLTree.cpp  GaussianRegion.cpp  GaussianStrengthPenaltyBoundary.cpp  PartialEnumerationGraph.cpp  Region.cpp  RegionAdjacencyGraph.cpp  RegionMerger.cpp  StrengthPenaltyBoundary.cpp
magic_lib/magic_core/Image/include/: Filter.h  GradientCalculator.h  GrayImage.h  Image.h  MonoImage.h
magic_lib/magic_core/Image/src/: Filter.cpp  GaussFilter.cpp  Watershed.cpp
magic_lib/magic_core/Matrix/include/: Matrix.h
magic_lib/magic_core/Matrix/src/: Matrix.cpp
magic_lib/magic_core/Polygon/include/: PolygonProjectionUtil.h
magic_lib/magic_core/Polygon/src/: PolygonDrawUtil.cpp  PolygonProjectionUtil.cpp
magic_lib/magic_core/Radarsat/include/: r2xml.h
magic_lib/magic_core/Texture/include/: SignalProcessing.h  TextureFeatExtract.h  matrix_gabor.h
magic_lib/magic_core/Texture/src/: TextureFeatExtract.cpp  matrix_gabor.cpp
magic_lib/magic_py/: magic_rag.py
magic_lib/magic_wrapper/include/: Fisher.h  PyGMM.h  R2ProductInfo.h  TextureWrapper.h
magic_lib/magic_wrapper/src/: Fisher.cpp  TextureWrapper.cpp  magic_py.cpp
rcm_dataset_preparation/: .gitignore  0_compute_data_stats.py  1_class_stats_data_split.py  2_patch_dataset_creator.py  README.md  annotated_products.txt  irgs.py  landmask_functions.py  parallel_stuff.py  rcm_functions.py
rcm_dataset_preparation/magic_lib/: .gitignore
rcm_dataset_preparation/magic_lib/magic_core/: CMakeLists.txt
rcm_dataset_preparation/magic_lib/magic_core/Classifier/include/: AnnealingUtil.h  GaussianRegionClustering.h  MarkovNetClassifier.h  PixelBasedClustering.h  RegionBasedClustering.h  RegionClustering.h  SegmentationStatistics.h
rcm_dataset_preparation/magic_lib/magic_core/Classifier/src/: AnnealingUtil.cpp  GaussianClustering.cpp  GaussianRegionClustering.cpp  MarkovNetClassifier.cpp  PixelBasedClustering.cpp  RegionClassifier.cpp  RegionClustering.cpp  Sampler.cpp
rcm_dataset_preparation/magic_lib/magic_core/Common/include/: DataType.h  EstimateUtil.h
rcm_dataset_preparation/magic_lib/magic_core/Graph/include/: Boundary.h  EdgeWeightKey.h  PartialEnumerationGraph.h  RegionAdjacencyGraph.h
rcm_dataset_preparation/magic_lib/magic_core/Graph/src/: Boundary.cpp  EdgeWeightKey.cpp  GIEPGraph.cpp  Graph.cpp
rcm_dataset_preparation/magic_lib/magic_core/Image/include/: GaussFilter.h  Watershed.h
rcm_dataset_preparation/magic_lib/magic_core/Image/src/: GradientCalculator.cpp  Image.cpp  MonoImage.cpp
rcm_dataset_preparation/magic_lib/magic_core/Matrix/include/: Eigen.h  Vector.h
rcm_dataset_preparation/magic_lib/magic_core/Matrix/src/: Eigen.cpp  Vector.cpp
rcm_dataset_preparation/magic_lib/magic_core/Polygon/include/: PolygonDrawUtil.h
rcm_dataset_preparation/magic_lib/magic_core/Texture/src/: SignalProcessing.cpp
rcm_dataset_preparation/magic_lib/magic_py/: magic_py.cp310-win_amd64.pyd  magic_py.cp314-win_amd64.pyd
rcm_dataset_preparation/magic_lib/magic_wrapper/include/: GradientWrapper.h  ImageConversion.h  PyRAG.h  WatershedWrapper.h  permuto_wrapper.h
rcm_dataset_preparation/magic_lib/magic_wrapper/src/: PyGMM.cpp  PyRAG.cpp  permuto_wrapper.cpp
